option java_package = "skadistats.clarity.wire.csgo.s1.proto";
option java_outer_classname = "CSGOS1UserMessages";

message CCSUsrMsg_SayText {
	optional int32 ent_idx = 1;
	optional string text = 2;
	optional bool chat = 3;
	optional bool textallchat = 4;
}

message CCSUsrMsg_SayText2 {
	optional int32 ent_idx = 1;
	optional bool chat = 2;
	optional string msg_name = 3;
	repeated string params = 4;
	optional bool textallchat = 5;
}

message CCSUsrMsg_TextMsg {
	optional int32 msg_dst = 1;
	repeated string params = 3;
}

message CCSUsrMsg_DisplayInventory {
	optional bool display = 1;
	optional int32 user_id = 2;
}
